# basil2

./: .gitignore  CMakeLists.txt  upload.sh
assets/: bin_gensettings.py  bin_landfill.csv  bin_recycling.csv  image_encoder.py
sd_card/: bluebin128.txt  greenbin128.txt  p1.txt  p2.txt  p3.txt  p4.txt  p5.txt  p6.txt  settings.txt
source/: CMakeLists.txt  lwipopts.h  main.cpp  settings.hpp
source/ntp/: ntp.cpp  ntp.hpp
source/oled/: oled.cpp  oled.hpp
source/pump/: pump.cpp  pump.hpp
source/settings_reader/: settings_reader.cpp  settings_reader.hpp
source/system/: system.cpp  system.hpp
